db: games scoreboard tui/gui implementation