@@ -1,37 +1,53 @@
 package it.polimi.ingsw.am23.view.gui.controllers;
 
+import it.polimi.ingsw.am23.model.payloads.MatchRankingsPayload;
 import it.polimi.ingsw.am23.model.payloads.PlayerScore;
 import it.polimi.ingsw.am23.model.payloads.ScoreBoardPayload;
 import it.polimi.ingsw.am23.view.gui.JavaFXView;
 import javafx.fxml.FXML;
+import javafx.scene.Parent;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
 
 import java.util.*;
-import java.util.stream.Collectors;
-
 
 public class ScoreboardController {
-    @FXML private Label titleLabel;
-    @FXML private VBox rankingContainer;
-    @FXML private Button menuButton;
+    @FXML
+    private VBox rootContainer;
+    @FXML
+    private Label titleLabel;
+    @FXML
+    private VBox rankingContainer;
+    @FXML
+    private Label positionLabel;
+    @FXML
+    private Button leaderboardButton;
+    @FXML
+    private Button menuButton;
 
     private JavaFXView view;
+    private int matchPlayerCount = -1;
 
-    public void setView(JavaFXView view){
+    public void setView(JavaFXView view) {
         this.view = view;
     }
 
-    public void showScoreboard(ScoreBoardPayload payload){
+    public Parent getRoot() {
+        return rootContainer;
+    }
+
+    public void showScoreboard(ScoreBoardPayload payload) {
         if (payload == null || payload.scores() == null) return;
+
+        matchPlayerCount = payload.scores().size();
 
         List<PlayerScore> sorted = payload.scores().stream()
                 .sorted(Comparator.comparingInt(PlayerScore::totalPrestigePoints)
                         .thenComparingInt(PlayerScore::foodPoints)
                         .reversed())
-                .collect(Collectors.toList());
+                .toList();
 
         List<Integer> positions = new ArrayList<>();
         for (int i = 0; i < sorted.size(); i++) {
@@ -59,30 +75,59 @@ public class ScoreboardController {
             HBox row = buildRow(pos, nickname, entry.totalPrestigePoints(), entry.foodPoints());
             rankingContainer.getChildren().add(row);
         }
+
+        if (positionLabel != null) {
+            positionLabel.setText("Classifica globale in arrivo…");
+        }
+        if (leaderboardButton != null) {
+            leaderboardButton.setDisable(true);
+        }
     }
 
-    private HBox buildRow(int position, String nickname, int pp, int food){
+    public void showMatchRankings(String myPlayerId, MatchRankingsPayload payload) {
+        if (payload == null || positionLabel == null) return;
+
+        if (!payload.persistenceAvailable()) {
+            positionLabel.setText("Classifica non disponibile (DB offline).");
+            if (leaderboardButton != null) {
+                leaderboardButton.setDisable(true);
+            }
+            return;
+        }
+
+        Integer pos = payload.positionByPlayerId() != null
+                ? payload.positionByPlayerId().get(myPlayerId)
+                : null;
+
+        if (pos == null || pos <= 0) {
+            positionLabel.setText("Posizione globale: n/d (partite a "
+                    + payload.playerCount() + " giocatori)");
+        } else {
+            positionLabel.setText("Sei #" + pos + " nella classifica globale delle partite a "
+                    + payload.playerCount() + " giocatori.");
+        }
+
+        if (leaderboardButton != null) {
+            leaderboardButton.setDisable(false);
+        }
+    }
+
+    private HBox buildRow(int position, String nickname, int pp, int food) {
         HBox row = new HBox(16);
         row.setAlignment(javafx.geometry.Pos.CENTER);
         row.setPadding(new javafx.geometry.Insets(10, 20, 10, 20));
         row.setPrefWidth(360);
 
-        String bgColor = switch(position){
-            case 1 -> "#FFD700"; // oro
-            default -> "#E8E8E8"; // grigio chiaro
-        };
+        String bgColor = position == 1 ? "#FFD700" : "#E8E8E8";
         String textColor = "#1a1a1a";
 
         row.setStyle(
                 "-fx-background-color: " + bgColor + ";" +
-                "-fx-background-radius: 8;" +
-                "-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 6, 0, 0, 2);"
+                        "-fx-background-radius: 8;" +
+                        "-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 6, 0, 0, 2);"
         );
 
-        String medal = switch (position){
-            case 1 -> "🥇";
-            default -> position + "°";
-        };
+        String medal = position == 1 ? "🥇" : "°";
 
         Label positionLabel = new Label(medal);
         positionLabel.setStyle("-fx-font-size: 20; -fx-min-width: 40;");
@@ -101,7 +146,15 @@ public class ScoreboardController {
     }
 
     @FXML
-    private void onMenuClicked(){
+    private void onLeaderboardClicked() {
+        if (view != null && matchPlayerCount > 0) {
+            view.requestLeaderboard(matchPlayerCount);
+        }
+    }
+
+    @FXML
+    private void onMenuClicked() {
         view.goToLobby();
     }
+
 }
